[gd_scene load_steps=15 format=3 uid="uid://dvt6tmyt3u46e"]

[ext_resource type="Shader" path="res://src/Shaders/Vignette.gdshader" id="1_pwt6p"]
[ext_resource type="Script" path="res://src/Scripts/Level.gd" id="1_r3wpv"]
[ext_resource type="PackedScene" uid="uid://5iaqrrp5m1ar" path="res://src/Scenes/Enemy/Chaser.tscn" id="1_ry6n2"]
[ext_resource type="Script" path="res://src/Scripts/LevelGeneration/SpawnData.gd" id="2_lhyli"]
[ext_resource type="Shader" path="res://src/Shaders/ChromaticAberration.gdshader" id="2_xsx4r"]
[ext_resource type="PackedScene" uid="uid://dcwe2fhdssqod" path="res://src/Scenes/Enemy/Fleer.tscn" id="3_xicmk"]
[ext_resource type="Script" path="res://src/Scenes/UI/GrowthText.gd" id="5_r0xt8"]
[ext_resource type="Script" path="res://src/Scenes/UI/GrowthLeft.gd" id="6_eg2vm"]
[ext_resource type="PackedScene" uid="uid://c0utwiykrhy5g" path="res://src/Scenes/Amoeba.tscn" id="9_gyysq"]

[sub_resource type="Resource" id="Resource_264hh"]
script = ExtResource("2_lhyli")
type = ExtResource("3_xicmk")
amount = 15
min_size = 0
max_size = 5

[sub_resource type="Resource" id="Resource_t5orb"]
script = ExtResource("2_lhyli")
type = ExtResource("1_ry6n2")
amount = 10
min_size = 10
max_size = 30

[sub_resource type="Resource" id="Resource_yhsp7"]
script = ExtResource("2_lhyli")
type = ExtResource("3_xicmk")
amount = 15
min_size = 5
max_size = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lhn4t"]
shader = ExtResource("1_pwt6p")
shader_parameter/inner_radius = 0.1
shader_parameter/outer_radius = 0.75
shader_parameter/vignette_strength = 0.5
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2dgtv"]
shader = ExtResource("2_xsx4r")
shader_parameter/r_displacement = Vector2(1.25, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-1.25, 0)

[node name="Level" type="Node2D"]
script = ExtResource("1_r3wpv")
amount_left = 15
spawns = Array[ExtResource("2_lhyli")]([SubResource("Resource_264hh"), SubResource("Resource_t5orb"), SubResource("Resource_yhsp7")])

[node name="Enemies" type="Node2D" parent="."]

[node name="Effects" type="CanvasLayer" parent="."]

[node name="Viginette" type="ColorRect" parent="Effects"]
material = SubResource("ShaderMaterial_lhn4t")
offset_right = 640.0
offset_bottom = 360.0

[node name="ChromaticAberration" type="ColorRect" parent="Effects"]
material = SubResource("ShaderMaterial_2dgtv")
offset_right = 640.0
offset_bottom = 360.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.266575, 0.266575, 0.266575, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="GrowthText" type="Control" parent="UI/Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_r0xt8")

[node name="Text" type="RichTextLabel" parent="UI/Control/GrowthText"]
layout_mode = 0
offset_right = 83.0
offset_bottom = 40.0
text = "Growth: "

[node name="Score" type="RichTextLabel" parent="UI/Control/GrowthText"]
layout_mode = 0
offset_left = 83.0
offset_right = 123.0
offset_bottom = 40.0

[node name="GrowthLeft" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 421.0
offset_right = 461.0
offset_bottom = 40.0
script = ExtResource("6_eg2vm")

[node name="Text" type="RichTextLabel" parent="UI/GrowthLeft"]
layout_mode = 0
offset_right = 109.0
offset_bottom = 40.0
text = "Amount Left:"

[node name="Score" type="RichTextLabel" parent="UI/GrowthLeft"]
layout_mode = 0
offset_left = 109.0
offset_right = 173.0
offset_bottom = 40.0

[node name="Limits" type="Node2D" parent="."]

[node name="TopLeft" type="Marker2D" parent="Limits"]

[node name="BottomRight" type="Marker2D" parent="Limits"]
position = Vector2(2048, 1024)

[node name="Amoeba" parent="." instance=ExtResource("9_gyysq")]
position = Vector2(123, 143)

[node name="Growth" parent="Amoeba" index="4"]
value = 1

[node name="Fleer" parent="." instance=ExtResource("3_xicmk")]
position = Vector2(316, 143)

[node name="Growth" parent="Fleer" index="1"]
value = 1

[editable path="Amoeba"]
[editable path="Amoeba/Hurtbox"]
[editable path="Amoeba/Abilities/BoostAbility"]
[editable path="Fleer"]
[editable path="Fleer/Sight"]
